--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
             <button type="submit">Login</button>
         </form>
     </div>
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            
+            var username = document.getElementById("username").value;
+            var password = document.getElementById("password").value;
+
+            if (username === "admin" && password === "password") {
+                alert("Login successful!");
+            } else {
+                document.getElementById("error-message").innerText = "Invalid username or password.";
+            }
+        });
+    </script>
+
 
 </body>
 </html>
